--- a/src/style.css
+++ b/src/style.css
@@ -93,3 +93,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+#myCanvas {
+  color: #000000;
+  border: 2px solid #ffffff;   
+  box-shadow: 2px 2px 10px #6937c5;
+}
