--- a/src/style.css
+++ b/src/style.css
@@ -96,6 +96,7 @@ button:focus-visible {
 
 #myCanvas {
   color: #000000;
+  background-color: #ffffff;
   border: 2px solid #ffffff;   
   box-shadow: 2px 2px 10px #6937c5;
 }
